--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
-{ "version": 2,
-"builds": [
-  {
-    "src": "index.js",
-    "use": "@now/node"
-  }
-],
-"rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{ 
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api"
+    }
+  ]
+
+}
