--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
     }
   ],
   "routes": [
-    { "src": "/.*", "dest": "/index.js" }
+    { "src": "/(.*)", "dest": "/api/index.js" ,"methods": ["GET", "POST", "PUT", "DELETE", "OPTION"]}
     ]
 }
